# codex

./: AGENTS.md  BUILD.bazel  MODULE.bazel  README.md
.codex/skills/babysit-pr/: SKILL.md
.github/ISSUE_TEMPLATE/: 3-cli.yml
.github/workflows/: bazel.yml  ci.yml  rust-ci.yml  rust-release-windows.yml  rust-release.yml  sdk.yml  shell-tool-mcp.yml
codex-cli/: README.md  package.json
codex-cli/scripts/: build_npm_package.py  install_native_deps.py
codex-rs/: Cargo.toml  README.md
codex-rs/app-server/: README.md
codex-rs/app-server/src/: bespoke_event_handling.rs  codex_message_processor.rs  outgoing_message.rs  thread_state.rs
codex-rs/arg0/src/: lib.rs
codex-rs/cli/src/: branding.rs  lib.rs  login.rs  main.rs  mcp_cmd.rs
codex-rs/config/src/: lib.rs  state.rs
codex-rs/core/: Cargo.toml  README.md  config.schema.json
codex-rs/core/src/: api_bridge.rs  auth.rs  (+15 more)
codex-rs/linux-sandbox/: README.md
codex-rs/responses-api-proxy/: README.md
codex-rs/state/: Cargo.toml
codex-rs/tui/: Cargo.toml
codex-rs/tui_app_server/: tooltips.txt
codex-rs/windows-sandbox-rs/: sandbox_smoketests.py
docs/: authentication.md  config.md  contributing.md  getting-started.md  install.md  open-source-fund.md  sandbox.md  slash_commands.md  tui-chat-composer.md  tui-stream-chunking-validation.md
patches/: coreaudio-sys_bindgen_extra_clang_args.patch  toolchains_llvm_bootstrapped_resource_dir.patch
scripts/: stage_npm_packages.py
scripts/install/: install.ps1  install.sh
sdk/typescript/: README.md  package.json
shell-tool-mcp/: README.md  package.json
(+169 files in other folders)
