load("@apple_support//xcode:xcode_config.bzl", "xcode_config")

xcode_config(name = "disable_xcode")

# We mark the local platform as glibc-compatible so that rust can grab a toolchain for us.
# TODO(zbarsky): Upstream a better libc constraint into rules_rust.
# We only enable this on linux though for sanity, and because it breaks remote execution.
platform(
    name = "local_linux",
    constraint_values = [
        # We mark the local platform as glibc-compatible because musl-built rust cannot dlopen proc macros.
        "@llvm//constraints/libc:gnu.2.28",
    ],
    parents = ["@platforms//host"],
)

platform(
    name = "local_windows",
    constraint_values = [
        # We just need to pick one of the ABIs. Do the same one we target.
        "@rules_rs//rs/experimental/platforms/constraints:windows_gnullvm",
    ],
    parents = ["@platforms//host"],
)

alias(
    name = "rbe",
    actual = "@rbe_platform",
)

alias(
    name = "coreaudio_clang_builtin_headers_include_directory",
    actual = select({
        "@rules_rs//rs/experimental/platforms/config:aarch64-apple-darwin": "@llvm//toolchain:macos_aarch64/clang_builtin_headers_include_directory",
        "@rules_rs//rs/experimental/platforms/config:x86_64-apple-darwin": "@llvm//toolchain:macos_x86_64/clang_builtin_headers_include_directory",
        "//conditions:default": "@llvm//:builtin_headers",
    }),
)

exports_files(["AGENTS.md"])
